fix(frontend): Add wrapping to licences in create and edit form
I added some wrapping to the licences on both the `create` and `edit` forms, as well as a max-width for both of their containing divs. I also moved the spacing margin from the left to the right, as to avoid any whitespace at the beginning of a newly-wrapped line.

--- a/client/src/admin/create-user-form/create-user-form.module.css
+++ b/client/src/admin/create-user-form/create-user-form.module.css
@@ -29,10 +29,12 @@
 
 .licences {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 46rem;
 }
 
-.licence + .licence {
-  margin-left: 1rem;
+.licence:not(:last-child) {
+  margin-right: 1rem;
 }
 
 .noLicencesText {
